capacity4more/themes/c4m/kapablo/sass/base/_node.scss
.node {
  .group-right {
    section {
      border-left: 1px solid $color-gray-dark;
      color: $color-gray-dark;
      padding: 5px 25px;
      margin-bottom: 35px;
    }
    h1, h2, h3, h4 {
      text-transform: uppercase;
    }

    h3 {
      font-size: 20px;
      margin-top: 0;
    }
    .links {
      clear: left;
    }

    .group-detail-element {
      margin-bottom: 25px;
    }
  }

  .group-left {

    #collapse-sidebar {
      width: 100%;
      text-align: left;
      margin: 10px 0;
      font-size: 32px;
      background-color: transparent;
      border-color: transparent;
      color: $highlight-blue;
    }

    fieldset {
      margin-bottom: 35px;

      &.collapsible {

        .panel-heading {
          margin-bottom: 0;

          .panel-title {
            width: 100%;
            color: $highlight-blue;
            border-bottom: 2px dashed $highlight-blue;
            padding: 6px 0;
            font-size: $font-size-h4;
            text-decoration: none;

            &:hover,
            &:active {
              text-decoration: none;
            }
          }
        }

        .panel-collapse {

          .panel-body {
            padding: 0 15px;

            .field {
              margin-bottom: 7px;

              .field-label {
                color: $color-gray;
              }

              .field-items {

                a {
                  color: $highlight-blue;
                }

                .field-item {

                  ul {

                    li {
                      padding: 10px 0;
                      border-bottom: 1px solid $color-light-gray;

                      &.last {
                        border-bottom: 0 none;
                      }

                      .toggle {
                        float: right;
                        width: 1em;
                        height: 1em;
                      }
                    }
                  }
                }
              }
            }
          }
        }

        &.collapsed {
          height: 3em;
        }
      }
    }
    fieldset.group-details {

      .panel-collapse {

        .panel-body {

          .field {

            .field-label {
              color: $color-brown;
            }

            .field-items {

              a {
                color: $color-blue;
              }

              .field-item {

                .term-tree-list {

                  a {
                    @include arrow-image('down', 'blue', 'before');
                  }

                  a:only-child {
                    background: none;
                  }

                  ul {

                    li.selected {
                      font-weight: normal;
                      padding: 10px 0;
                      border-bottom: 0 none;
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}

.node-teaser {
}

